bk_ida/gobmkida/c3/make_domains
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:645:12: error: expected expression
*( _OWORD *)&b_eye[v6].value.a = v9; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:645:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b_eye[v6].value.a = v9; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:646:12: error: expected expression
*( _OWORD *)&b_eye[v6].color = v9; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:646:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b_eye[v6].color = v9; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:650:12: error: expected expression
*( _OWORD *)&w_eye[v6].value.a = v9; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:650:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&w_eye[v6].value.a = v9; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:651:12: error: expected expression
*( _OWORD *)&w_eye[v6].color = v9; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:651:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&w_eye[v6].color = v9; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:689:12: error: expected expression
*( _OWORD *)&v11->value.a = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:689:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11->value.a = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:690:12: error: expected expression
*( _OWORD *)&v11->color = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/engine/optics.c:690:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11->color = 0LL; 
   ^
12 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/make_domains/src/obj/1/optics.o] Error 1
